[gd_scene load_steps=7 format=4 uid="uid://boqkkx2coehi3"]

[ext_resource type="TileSet" uid="uid://bolc3xf27oref" path="res://tilesets/example_map_terrain.tres" id="1_h0c2j"]
[ext_resource type="Script" uid="uid://ds7vasffkpir6" path="res://scenes/route_planner.gd" id="1_xjhch"]
[ext_resource type="Texture2D" uid="uid://dr1gkud4o0dfh" path="res://assets/terrain/vectoraith_tileset_terrain_3x3_tundra_32x32.png" id="2_xjhch"]
[ext_resource type="PackedScene" uid="uid://d1boh1uanohf7" path="res://scenes/path_line.tscn" id="3_hwdkj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wlnn2"]
texture = ExtResource("2_xjhch")
texture_region_size = Vector2i(32, 32)
12:1/0 = 0

[sub_resource type="TileSet" id="TileSet_70hdd"]
tile_size = Vector2i(32, 32)
custom_data_layer_0/name = "map_tile"
custom_data_layer_0/type = 24
sources/1 = SubResource("TileSetAtlasSource_wlnn2")
metadata/_better_terrain = {
&"decoration": ["Decoration", Color(0.411765, 0.411765, 0.411765, 1), 3, [], {
&"path": "res://addons/better-terrain/icons/Decoration.svg"
}],
&"terrains": [],
&"version": "0.2"
}

[node name="RoutePlanner" type="Node2D"]
script = ExtResource("1_xjhch")
pathline_scene = ExtResource("3_hwdkj")

[node name="BackgroundMap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD///7/BwAJAAAAAAD/////BwAdAAcAAAD//wAABwAJABMAAAD//wEABwATAAMAAAD//wIABwAJAAAAAAD//wMABwAJAAsAAAD//wQABwAJAA8AAAD//wUABwATAAMAAAD//wYABwAdAAMAAAD//wcABwAdAAMAAAD//wgABwAJAA8AAAD//wkABwAJAA8AAAD//woABwAdAAsAAAD//wsABwATAA8AAAD//wwABwATAA8AAAD//w0ABwAJAAAAAAD//w4ABwAdAAsAAAD//w8ABwAdAA8AAAAAAP7/BwATAA8AAAAAAP//BwAJAA8AAAAAAAAABwAJAAsAAAAAAAEABwATAAMAAAAAAAIABwAJAAsAAAAAAAMABwAJAAAAAAAAAAQABwATAA8AAAAAAAUABwAJAAAAAAAAAAYABwATAAsAAAAAAAcABwAdAAMAAAAAAAgABwATAAcAAAAAAAkABwAdAAcAAAAAAAoABwAJAAsAAAAAAAsABwAJAAAAAAAAAAwABwAJABcAAAAAAA0ABwAdAAMAAAAAAA4ABwAdAAMAAAAAAA8ABwATAAsAAAABAP7/BwAJABMAAAABAP//BwATAA8AAAABAAAABwAJABcAAAABAAEABwATAAMAAAABAAIABwATAAcAAAABAAMABwAdAAMAAAABAAQABwATAA8AAAABAAUABwATAAsAAAABAAYABwATAAsAAAABAAcABwAJABcAAAABAAgABwAdAAMAAAABAAkABwAJAAsAAAABAAoABwAdAAsAAAABAAsABwAdAA8AAAABAAwABwAdAAsAAAABAA0ABwAdAAcAAAABAA4ABwAJABMAAAABAA8ABwATAAcAAAACAP7/BwAdAAcAAAACAP//BwATAAsAAAACAAAABwAJAAAAAAACAAEABwATAAMAAAACAAIABwATAAcAAAACAAMABwATAAMAAAACAAQABwATAA8AAAACAAUABwAdAAsAAAACAAYABwATAAcAAAACAAcABwAdAAcAAAACAAgABwAJAAsAAAACAAkABwAJAAsAAAACAAoABwATAAMAAAACAAsABwAJAA8AAAACAAwABwAJABcAAAACAA0ABwAdAAcAAAACAA4ABwAdAAcAAAACAA8ABwAdAAMAAAADAP7/BwAdAAsAAAADAP//BwAJABMAAAADAAAABwATAAsAAAADAAEABwAJABMAAAADAAIABwATAAMAAAADAAMABwAJABcAAAADAAQABwAJAA8AAAADAAUABwAJABMAAAADAAYABwATAA8AAAADAAcABwAJAA8AAAADAAgABwATAAsAAAADAAkABwAdAAcAAAADAAoABwAJAAsAAAADAAsABwAdAAMAAAADAAwABwAdAAMAAAADAA0ABwATAA8AAAADAA4ABwAJABMAAAADAA8ABwAdAAsAAAAEAP7/BwAJABcAAAAEAP//BwAdAAMAAAAEAAAABwATAAcAAAAEAAEABwATAAsAAAAEAAIABwATAA8AAAAEAAMABwAJABcAAAAEAAQABwAdAA8AAAAEAAUABwAdAAcAAAAEAAYABwATAAcAAAAEAAcABwAdAAMAAAAEAAgABwAJAAsAAAAEAAkABwATAAcAAAAEAAoABwATAAcAAAAEAAsABwAdAAcAAAAEAAwABwAJAA8AAAAEAA0ABwATAAcAAAAEAA4ABwATAA8AAAAEAA8ABwAJABcAAAAFAP7/BwATAAcAAAAFAP//BwATAAcAAAAFAAAABwAJAAsAAAAFAAEABwAJAAsAAAAFAAIABwATAAcAAAAFAAMABwAdAA8AAAAFAAQABwATAA8AAAAFAAUABwAdAA8AAAAFAAYABwAJAA8AAAAFAAcABwAdAA8AAAAFAAgABwATAAsAAAAFAAkABwATAAMAAAAFAAoABwAJABMAAAAFAAsABwATAA8AAAAFAAwABwAJAA8AAAAFAA0ABwAdAA8AAAAFAA4ABwAdAAsAAAAFAA8ABwAJABcAAAAGAP7/BwAJABMAAAAGAP//BwAJAA8AAAAGAAAABwAdAAMAAAAGAAEABwAdAAcAAAAGAAIABwAJAA8AAAAGAAMABwATAAMAAAAGAAQABwAdAAcAAAAGAAUABwAdAAMAAAAGAAYABwAJAAsAAAAGAAcABwAJAAsAAAAGAAgABwAdAAMAAAAGAAkABwAJAA8AAAAGAAoABwATAAcAAAAGAAsABwAJABMAAAAGAAwABwAdAAsAAAAGAA0ABwATAA8AAAAGAA4ABwAdAAsAAAAGAA8ABwAJAAsAAAAHAP7/BwAJAAsAAAAHAP//BwAJABMAAAAHAAAABwATAAMAAAAHAAEABwATAAcAAAAHAAIABwAdAAMAAAAHAAMABwATAAMAAAAHAAQABwAJAA8AAAAHAAUABwAdAAMAAAAHAAYABwAdAA8AAAAHAAcABwAdAAMAAAAHAAgABwAdAA8AAAAHAAkABwAdAAcAAAAHAAoABwAJAA8AAAAHAAsABwAdAAMAAAAHAAwABwAJAAAAAAAHAA0ABwAdAAsAAAAHAA4ABwAJAAAAAAAHAA8ABwAdAAcAAAAIAP7/BwAJABMAAAAIAP//BwATAA8AAAAIAAAABwAdAA8AAAAIAAEABwAJAAAAAAAIAAIABwATAAMAAAAIAAMABwAJABMAAAAIAAQABwAJAAsAAAAIAAUABwATAAcAAAAIAAYABwATAAsAAAAIAAcABwATAAcAAAAIAAgABwATAAcAAAAIAAkABwATAA8AAAAIAAoABwAdAAsAAAAIAAsABwAJAA8AAAAIAAwABwAJABMAAAAIAA0ABwAJAA8AAAAIAA4ABwATAAsAAAAIAA8ABwAJABMAAAAJAP7/BwATAAMAAAAJAP//BwAdAA8AAAAJAAAABwAJABcAAAAJAAEABwAJAA8AAAAJAAIABwAJAA8AAAAJAAMABwAJAA8AAAAJAAQABwAJAAAAAAAJAAUABwAdAA8AAAAJAAYABwAdAA8AAAAJAAcABwAJAAAAAAAJAAgABwAdAAcAAAAJAAkABwATAAMAAAAJAAoABwAJABMAAAAJAAsABwAJAA8AAAAJAAwABwATAAMAAAAJAA0ABwAJAAsAAAAJAA4ABwAJABMAAAAJAA8ABwAdAAcAAAAKAP7/BwAJABMAAAAKAP//BwAJABMAAAAKAAAABwAdAA8AAAAKAAEABwATAAcAAAAKAAIABwAJABMAAAAKAAMABwAJABcAAAAKAAQABwAJAA8AAAAKAAUABwATAAMAAAAKAAYABwATAAsAAAAKAAcABwATAAMAAAAKAAgABwATAAsAAAAKAAkABwAdAAsAAAAKAAoABwAJABMAAAAKAAsABwAdAAMAAAAKAAwABwAJABMAAAAKAA0ABwAdAAsAAAAKAA4ABwATAA8AAAAKAA8ABwAJABcAAAALAP7/BwATAA8AAAALAP//BwAdAAsAAAALAAAABwAJAAAAAAALAAEABwAJAA8AAAALAAIABwAJABMAAAALAAMABwAJABMAAAALAAQABwATAAsAAAALAAUABwATAAcAAAALAAYABwAdAAcAAAALAAcABwATAA8AAAALAAgABwAdAAsAAAALAAkABwAdAAMAAAALAAoABwAJAAsAAAALAAsABwATAA8AAAALAAwABwATAA8AAAALAA0ABwATAAsAAAALAA4ABwATAAMAAAALAA8ABwAJABcAAAAMAP7/BwATAAMAAAAMAP//BwAdAA8AAAAMAAAABwAdAAcAAAAMAAEABwATAA8AAAAMAAIABwAJAAsAAAAMAAMABwAJAAsAAAAMAAQABwAJAA8AAAAMAAUABwAdAAsAAAAMAAYABwAdAAsAAAAMAAcABwAJABMAAAAMAAgABwAdAAsAAAAMAAkABwAJABMAAAAMAAoABwATAAcAAAAMAAsABwATAAcAAAAMAAwABwAdAA8AAAAMAA0ABwAdAAsAAAAMAA4ABwATAAcAAAAMAA8ABwAdAAMAAAANAP7/BwAJAA8AAAANAP//BwATAAsAAAANAAAABwATAAMAAAANAAEABwATAAsAAAANAAIABwATAAcAAAANAAMABwAdAA8AAAANAAQABwAJABcAAAANAAUABwAdAA8AAAANAAYABwATAAsAAAANAAcABwAdAA8AAAANAAgABwAJABMAAAANAAkABwAJABcAAAANAAoABwAJAAAAAAANAAsABwAJAA8AAAANAAwABwAdAAsAAAANAA0ABwAJAAsAAAANAA4ABwAJAA8AAAANAA8ABwATAAsAAAAOAP7/BwAJABMAAAAOAP//BwATAAMAAAAOAAAABwATAAcAAAAOAAEABwATAAcAAAAOAAIABwAJABcAAAAOAAMABwAdAAsAAAAOAAQABwAdAAsAAAAOAAUABwAJAA8AAAAOAAYABwATAAMAAAAOAAcABwAJABMAAAAOAAgABwATAAsAAAAOAAkABwAJABMAAAAOAAoABwATAAcAAAAOAAsABwAJAAAAAAAOAAwABwAJABcAAAAOAA0ABwAJAAAAAAAOAA4ABwATAAcAAAAOAA8ABwAdAA8AAAAPAP7/BwAdAAcAAAAPAP//BwATAAcAAAAPAAAABwAJAAsAAAAPAAEABwATAAcAAAAPAAIABwAdAAsAAAAPAAMABwAdAAsAAAAPAAQABwAdAA8AAAAPAAUABwATAAMAAAAPAAYABwAJAAsAAAAPAAcABwATAAMAAAAPAAgABwAdAAcAAAAPAAkABwATAAMAAAAPAAoABwATAAsAAAAPAAsABwAdAA8AAAAPAAwABwATAA8AAAAPAA0ABwAJAAsAAAAPAA4ABwATAAMAAAAPAA8ABwAdAAsAAAAQAP7/BwAdAAsAAAAQAP//BwAdAAsAAAAQAAAABwATAA8AAAAQAAEABwAJAAsAAAAQAAIABwAJAAsAAAAQAAMABwAdAA8AAAAQAAQABwAdAAsAAAAQAAUABwATAAcAAAAQAAYABwAdAA8AAAAQAAcABwAJAAsAAAAQAAgABwATAA8AAAAQAAkABwATAAsAAAAQAAoABwAJABMAAAAQAAsABwAJABcAAAAQAAwABwAdAAMAAAAQAA0ABwAJAA8AAAAQAA4ABwAJAAAAAAAQAA8ABwAJAA8AAAARAP7/BwAJAAsAAAARAP//BwAJAAAAAAARAAAABwAdAAsAAAARAAEABwAdAAcAAAARAAIABwAJAAAAAAARAAMABwATAAsAAAARAAQABwAJAA8AAAARAAUABwATAAsAAAARAAYABwAJAA8AAAARAAcABwAJAAAAAAARAAgABwAJAAsAAAARAAkABwATAAsAAAARAAoABwAJABMAAAARAAsABwATAAsAAAARAAwABwATAAMAAAARAA0ABwAdAAcAAAARAA4ABwAdAAcAAAARAA8ABwAJABcAAAASAP7/BwAdAA8AAAASAP//BwATAAcAAAASAAAABwATAAMAAAASAAEABwATAA8AAAASAAIABwAJAAAAAAASAAMABwAdAAcAAAASAAQABwAJABcAAAASAAUABwAJABcAAAASAAYABwAdAA8AAAASAAcABwAdAAsAAAASAAgABwAdAAsAAAASAAkABwATAAcAAAASAAoABwAJABcAAAASAAsABwAdAAcAAAASAAwABwATAAsAAAASAA0ABwATAA8AAAASAA4ABwATAAsAAAASAA8ABwAdAAcAAAATAP7/BwAdAA8AAAATAP//BwATAAMAAAATAAAABwATAAsAAAATAAEABwAdAAsAAAATAAIABwAJABMAAAATAAMABwAJAAAAAAATAAQABwAdAAcAAAATAAUABwAdAAMAAAATAAYABwAdAAcAAAATAAcABwAJABMAAAATAAgABwATAA8AAAATAAkABwAdAAsAAAATAAoABwAdAAMAAAATAAsABwATAAMAAAATAAwABwAJAAAAAAATAA0ABwATAAcAAAATAA4ABwATAAcAAAATAA8ABwAJABMAAAAUAP7/BwATAAcAAAAUAP//BwATAAcAAAAUAAAABwAdAA8AAAAUAAEABwAdAAsAAAAUAAIABwAJABcAAAAUAAMABwATAAcAAAAUAAQABwAJAA8AAAAUAAUABwATAAcAAAAUAAYABwATAAsAAAAUAAcABwAdAAsAAAAUAAgABwAJAAAAAAAUAAkABwATAAcAAAAUAAoABwAdAAcAAAAUAAsABwAdAAsAAAAUAAwABwAJAAsAAAAUAA0ABwATAAsAAAAUAA4ABwAJABcAAAAUAA8ABwAdAAMAAAAVAP7/BwAdAA8AAAAVAP//BwAdAAcAAAAVAAAABwAJAA8AAAAVAAEABwATAAMAAAAVAAIABwAdAAsAAAAVAAMABwATAAcAAAAVAAQABwAdAAcAAAAVAAUABwAJAAsAAAAVAAYABwAJABcAAAAVAAcABwATAA8AAAAVAAgABwATAAcAAAAVAAkABwAdAAMAAAAVAAoABwATAAMAAAAVAAsABwATAA8AAAAVAAwABwAdAAMAAAAVAA0ABwATAA8AAAAVAA4ABwAJABcAAAAVAA8ABwAJAA8AAAAWAP7/BwATAAMAAAAWAP//BwATAAMAAAAWAAAABwAJAAsAAAAWAAEABwATAA8AAAAWAAIABwAdAA8AAAAWAAMABwATAA8AAAAWAAQABwAdAAcAAAAWAAUABwAdAA8AAAAWAAYABwATAA8AAAAWAAcABwAdAAMAAAAWAAgABwAdAA8AAAAWAAkABwAdAAsAAAAWAAoABwATAA8AAAAWAAsABwAJABcAAAAWAAwABwAJAA8AAAAWAA0ABwATAAMAAAAWAA4ABwAJAAAAAAAWAA8ABwAJAAAAAAAXAP7/BwATAA8AAAAXAP//BwATAAMAAAAXAAAABwAJAAsAAAAXAAEABwAJAAsAAAAXAAIABwAdAA8AAAAXAAMABwATAA8AAAAXAAQABwATAAsAAAAXAAUABwAdAAcAAAAXAAYABwAJABcAAAAXAAcABwATAAcAAAAXAAgABwAJAA8AAAAXAAkABwATAAMAAAAXAAoABwATAAsAAAAXAAsABwATAA8AAAAXAAwABwAdAA8AAAAXAA0ABwAJAAsAAAAXAA4ABwAJAA8AAAAXAA8ABwATAAsAAAAYAP7/BwAJAA8AAAAYAP//BwATAA8AAAAYAAAABwAdAAsAAAAYAAEABwATAAsAAAAYAAIABwAJABcAAAAYAAMABwAJABMAAAAYAAQABwAJABcAAAAYAAUABwAJABcAAAAYAAYABwAdAAsAAAAYAAcABwAdAAsAAAAYAAgABwAJAAsAAAAYAAkABwATAAsAAAAYAAoABwATAA8AAAAYAAsABwAdAAsAAAAYAAwABwATAAcAAAAYAA0ABwAJABcAAAAYAA4ABwAJABcAAAAYAA8ABwATAAMAAAAZAP7/BwAdAA8AAAAZAP//BwAJABcAAAAZAAAABwATAAsAAAAZAAEABwAJABcAAAAZAAIABwAdAAcAAAAZAAMABwAJAAAAAAAZAAQABwATAAcAAAAZAAUABwATAAMAAAAZAAYABwAdAAMAAAAZAAcABwAJABcAAAAZAAgABwATAA8AAAAZAAkABwAJAA8AAAAZAAoABwAJABMAAAAZAAsABwAdAAMAAAAZAAwABwATAAsAAAAZAA0ABwATAA8AAAAZAA4ABwATAAsAAAAZAA8ABwATAA8AAAD//xAABwAdAAMAAAD//xEABwAdAA8AAAD//xIABwAdAAsAAAD//xMABwAJAAsAAAAAABAABwAJABcAAAAAABEABwATAAcAAAAAABIABwATAA8AAAAAABMABwAJABMAAAABABAABwAJAAsAAAABABEABwAJABMAAAABABIABwATAA8AAAABABMABwATAAcAAAACABAABwAJAAsAAAACABEABwAJABMAAAACABIABwAdAAsAAAACABMABwATAA8AAAADABAABwAJABcAAAADABEABwAJAAAAAAADABIABwAdAAsAAAADABMABwAdAAMAAAAEABAABwAJABcAAAAEABEABwAdAAsAAAAEABIABwAJAA8AAAAEABMABwATAAsAAAAFABAABwATAAMAAAAFABEABwAdAAsAAAAFABIABwAdAAsAAAAFABMABwAJAAAAAAAGABAABwAdAAMAAAAGABEABwAdAAcAAAAGABIABwAJAAsAAAAGABMABwATAAcAAAAHABAABwATAAcAAAAHABEABwAJAA8AAAAHABIABwAdAAsAAAAHABMABwAJAAAAAAAIABAABwATAAsAAAAIABEABwAJAA8AAAAIABIABwATAAMAAAAIABMABwATAAcAAAAJABAABwAdAAsAAAAJABEABwAdAA8AAAAJABIABwAdAA8AAAAJABMABwAJABMAAAAKABAABwATAA8AAAAKABEABwATAAcAAAAKABIABwATAAsAAAAKABMABwATAAMAAAALABAABwAJABcAAAALABEABwAJABcAAAALABIABwATAAcAAAALABMABwAdAA8AAAAMABAABwAdAA8AAAAMABEABwAJABcAAAAMABIABwAJAAAAAAAMABMABwATAAMAAAANABAABwAdAAcAAAANABEABwAJAA8AAAANABIABwATAAcAAAANABMABwAJABcAAAAOABAABwAJABcAAAAOABEABwAdAAMAAAAOABIABwAdAAMAAAAOABMABwAJAAsAAAAPABAABwATAAcAAAAPABEABwAJABcAAAAPABIABwAdAAcAAAAPABMABwAdAA8AAAAQABAABwAJAA8AAAAQABEABwATAAMAAAAQABIABwATAA8AAAAQABMABwAJAA8AAAARABAABwATAA8AAAARABEABwAJABcAAAARABIABwAJABcAAAARABMABwAdAAMAAAASABAABwAJAAAAAAASABEABwAdAAcAAAASABIABwAJAAsAAAASABMABwAJAAsAAAATABAABwAJAAAAAAATABEABwATAA8AAAATABIABwAdAAcAAAATABMABwAdAAsAAAAUABAABwATAAMAAAAUABEABwAdAA8AAAAUABIABwATAAcAAAAUABMABwAJAAsAAAAVABAABwATAAMAAAAVABEABwATAAcAAAAVABIABwATAAMAAAAVABMABwAJAAsAAAAWABAABwATAA8AAAAWABEABwATAA8AAAAWABIABwAJABcAAAAWABMABwATAAsAAAAXABAABwAJAAAAAAAXABEABwAJAAAAAAAXABIABwATAAMAAAAXABMABwAJAAAAAAAYABAABwAJABcAAAAYABEABwAJABcAAAAYABIABwAdAAcAAAAYABMABwATAA8AAAAZABAABwAJABMAAAAZABEABwAJABMAAAAZABIABwAJAAAAAAAZABMABwAdAAMAAAA=")
tile_set = ExtResource("1_h0c2j")

[node name="CellHighlight" type="TileMapLayer" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.690196)
tile_set = SubResource("TileSet_70hdd")
